# flux-lang-ast

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.flx
Examples/: add.flx  main.cpp  main.flx  stdlib_test.flx
editors/vscode/: extension.js  package.json
editors/vscode/syntaxes/: flux.tmLanguage.json
include/flux/ast/: ast_node.h  ast_printer.h  ast_visitor.h  decl.h  expr.h  stmt.h  type.h
include/flux/common/: diagnostic.h  source_location.h
include/flux/complete/: complete.h
include/flux/lexer/: lexer.h  token.h  token_kind.h
include/flux/parser/: parser.h
include/flux/preprocessor/: preprocessor.h
include/flux/sema/: sema.h
include/flux/stdlib/: stdlib_modules.h
src/: main.cpp
src/ast/: ast_visitor.cpp
src/codegen/: codegen.cpp
src/common/: diagnostic.cpp
src/complete/: complete.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: parser.cpp
src/preprocessor/: preprocessor.cpp
src/sema/: sema.cpp
